# add-bot-rs

./: .dockerignore  .envrc  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  Settings.toml.example  default.nix
.github/workflows/: ci.yml
src/: bot.rs  command.rs  main.rs  settings.rs  state.rs  state_container.rs  types.rs  util.rs
src/commands/: activity.rs  mod.rs  queue.rs  sahko.rs  stats.rs  weather.rs
src/services/: activity.rs  leetify.rs  mod.rs  porssisahko.rs  weather.rs
