[package]
name = "add-bot"
version = "0.12.1"
authors = ["Rasmus Lövegren <fruitiex@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "=0.17.0", features = [
    "ctrlc_handler",
    "macros",
    "rustls",
], default-features = false }
config = "=0.15.19"
log = "=0.4.29"
pretty_env_logger = "=0.5.0"
tokio = { version = "=1.49.0", features = ["rt-multi-thread", "macros", "fs"] }
color-eyre = "=0.6.5"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
chrono = { version = "=0.4.43", features = ["serde"] }
chrono-tz = "=0.10.4"
regex = "=1.12.3"
lazy_static = "=1.5.0"
indexmap = { version = "=2.13.0", features = ["serde"] }
clap = { version = "=4.5.60", features = ["derive"] }
cached = { version = "=0.56.0", features = [
    "default",
    "async",
    "async_tokio_rt_multi_thread",
] }
reqwest = { version = "=0.12.28", default-features = false, features = [
    "json",
    "rustls-tls",
] }
futures = "=0.3.32"
plotters = { version = "=0.3.7", default-features = false, features = [
    "ab_glyph",
    "bitmap_backend",
    # "svg_backend",
    "chrono",
    "line_series",
] }
image = { version = "=0.25.9", features = ["png"] }
colorous = "=1.0.16"
